force-app/main/default/objects/Project_Resource__c/fields/Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hours__c</fullName>
    <formula>((5 * ( FLOOR( (  EndDate__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(  EndDate__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( (  StartDate__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(  StartDate__c - DATE( 1900, 1, 8), 7 ) ) )) * 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>