force-app/main/default/objects/Project_Resource__c/fields/ProjectLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProjectLineItem__c</fullName>
    <label>ProjectLineItem</label>
    <referenceTo>ProjectLineItem__c</referenceTo>
    <relationshipLabel>Project Resources</relationshipLabel>
    <relationshipName>Project_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>