force-app/main/default/objects/Project_Resource__c/fields/ResourceAmount__c.field-meta.xml
<CustomField>
    <fullName>ResourceAmount__c</fullName>
    <formula>Resource__r.Rateph__c * Assigned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>