force-app/main/default/objects/Project_Resource__c/fields/ResourceAmountFormula__c.field-meta.xml
<CustomField>
    <fullName>ResourceAmountFormula__c</fullName>
    <formula>Resource__r.Rateph__c * Assigned_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ResourceAmountFormula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>