force-app/main/default/objects/Project_Resource__c/validationRules/DateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>DateValidation</fullName>
    <active>true</active>
    <errorConditionFormula>if( StartDate__c &lt; today(), true,false)</errorConditionFormula>
    <errorDisplayField>EndDate__c</errorDisplayField>
    <errorMessage>Start date cannot be inferior to today&apos;s date.</errorMessage>
</ValidationRule>