force-app/main/default/objects/Project_Resource__c/validationRules/ProjectEndDateValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectEndDateValidationRule</fullName>
    <active>true</active>
    <errorConditionFormula>IF( EndDate__c &gt; ProjectLineItem__r.Project__r.EndDate__c , true, false)</errorConditionFormula>
    <errorMessage>A resource can&apos;t be assigned an end date bigger than the project&apos;s end date.</errorMessage>
</ValidationRule>